# my-wiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md  README_CN.md  pyproject.toml
config/: kb.yaml.example
docs/: getting-started-full.md  getting-started.md  troubleshooting.md
examples/demo-kb/raw/articles/: intro-to-ai-agents.md
tests/: conftest.py  test_config.py  test_lint.py  test_status.py
web/: README.md  app.py  requirements.txt  utils.py
web/pages/: 1_📊_Status.py  2_📚_Browse.py  3_🔍_Search.py  4_📤_Upload.py
wiki/: cli.py  fetch.py  graph.py  health.py  ingest.py  init.py  lint.py  query.py  search.py  status.py
wiki/ingest/: __init__.py  index.py  llm.py  processor.py  state.py  writers.py
